# RAG

./: .gitignore  README.md  pyproject.toml
Advanced-RAG/: README.md  app.py  mlflow.db  pyproject.toml
Advanced-RAG/blog/: Beyond-Naive-RAG-with-HyDE-Reranking-and-SubQuestions.md
Advanced-RAG/notebooks/: advanced-rag.ipynb  rag.ipynb
Agentic-RAG/: pyproject.toml
Agentic-RAG/blog/: Agentic-RAG-Building-Autonomous-Research-Agents-with-LlamaIndex.md
Agentic-RAG/notebooks/: 01_llamaindex_agents.ipynb  02_langgraph.ipynb  03_crewai.ipynb  04_google_adk.ipynb  05_strands_agents.ipynb  llamaindex_agents.ipynb
Agentic-RAG/scratch/: create_nbs.py
Grapg-RAG/: main.py  pyproject.toml
Modular-RAG/: pyproject.toml
Modular-RAG/blog/: Modular-RAG-A-Flexible-Pipeline-Architecture.md
Modular-RAG/notebooks/: modular-rag.ipynb
Modular-RAG/scratch/: create_nb.py  create_nb_workflow.py  test_pipeline.py
Naive-Simple-RAG/: README.md  app.py  main.py  pyproject.toml
Naive-Simple-RAG/blog/: Building-a-Naive-RAG-Application-from-Scratch-with-LlamaIndex-and-Gemini.md
Naive-Simple-RAG/notebooks/: rag.ipynb
src/: main.py
