[project]
name = "advanced-rag"
version = "0.1.0"
description = "Advanced RAG with LlamaIndex — HyDE, Re-ranking, Sub-Question Engine"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "llama-index-core>=0.14.21",
    "llama-index-embeddings-huggingface>=0.7.0",
    "llama-index-llms-google-genai>=0.9.1",
    "llama-index-postprocessor-sbert-rerank>=0.4.0",
    "mlflow>=3.11.1",
    "streamlit>=1.56.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "nest-asyncio>=1.6.0",
    "sentence-transformers>=4.0.0",
]

[dependency-groups]
dev = [
    "iprogress>=0.4",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.6",
]
