[project]
name = "agentic-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crewai>=1.14.4",
    "crewai-tools>=1.14.4",
    "langchain-google-genai>=4.2.2",
    "langgraph>=1.1.10",
    "llama-index-core>=0.14.21",
    "llama-index-embeddings-huggingface>=0.7.0",
    "llama-index-llms-google-genai>=0.9.2",
    "pypdf>=6.10.2",
    "sentence-transformers>=5.4.1",
    "smolagents>=1.24.0",
    "strands-agents>=1.38.0",
]

[dependency-groups]
dev = [
    "iprogress>=0.4",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.7",
]
