[project]
name = "naive-simple-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "llama-index-core>=0.14.20",
    "llama-index-embeddings-google-genai>=0.5.0",
    "llama-index-embeddings-huggingface>=0.7.0",
    "llama-index-llms-google-genai>=0.9.1",
]

[dependency-groups]
dev = [
    "iprogress>=0.4",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.6",
]
